feat(bff): add tool node
