# internal/bff-service/model/response/tool.go
@@ -31,6 +31,7 @@ type CustomToolSelect struct {
 type ToolSquareDetail struct {
 	ToolSquareInfo
 	ToolSquareActions
+	Schema string `json:"schema"`
 }
 
 type ToolSquareInfo struct {
@@ -47,4 +48,20 @@ type ToolSquareActions struct {
 	Tools           []MCPTool `json:"tools"`           // action列表
 	Detail          string    `json:"detail"`          // 详细描述
 	ActionSum       int64     `json:"actionSum"`       // action总数
+}
+
+type ToolSelectWithActions struct {
+	ToolID   string       `json:"toolId"`
+	ToolName string       `json:"toolName"`
+	ToolType string       `json:"toolType"`
+	IconUrl  string       `json:"iconUrl"`
+	ApiKey   string       `json:"apiKey"`
+	Desc     string       `json:"desc"`
+	Actions  []ActionInfo `json:"actions"`
+}
+
+type ActionInfo struct {
+	ActionName string `json:"actionName"`
+	ActionID   string `json:"actionId"`
+	Desc       string `json:"desc"`
 }
